Update 02. Basic ML: Supervised Learning.md

--- a/02. Basic ML: Supervised Learning.md
+++ b/02. Basic ML: Supervised Learning.md
@@ -17,9 +17,9 @@
   2. A set of examples is provided.
   3. A machine learning model is “trained” to solve the problem.
 
-<br>
-문제들이 specification이 잘 나와있는 경우도 있지만, 실제로 사람들이 잘하고 아주 자연적으로 나오는 문제들에 대해서는 specification을 주기가 힘든 경우가 많다. ex) face-detection을 할 때, 어떤 것들을 얼굴로 할지, 숙인 얼굴, 돌린 얼굴 등을 얼굴로 고려할 것인지… 이 같이 애매한 경우에는 보통 example이 주어지고 이에 맞게 학습시킨다.
-<br>
+  문제들이 specification이 잘 나와있는 경우도 있지만, 실제로 사람들이 잘하고 아주 자연적으로 나오는 문제들에 대해서는 specification을 주기가 힘든 경우가 많다. ex) face-detection을 할 때, 어떤 것들을 얼굴로 할지, 숙인 얼굴, 돌린 얼굴 등을 얼굴로 고려할 것인지… 이 같이 애매한 경우에는 보통 example이 주어지고 이에 맞게 학습시킨다.
+
+
 
 - Supervised Learning
 
@@ -45,7 +45,6 @@
 
        기존의 example이 아닌 다른 sample들에 대해서도 머신러닝 모델이 잘 작동하는지 확인
   
-  <br>
   - What we must decide
 
     1. Hypothesis sets $\mathcal {H_1, ..., H_M}$ 
@@ -58,9 +57,9 @@
 
     2. Optimization algorithm
 
-<br>
-  정리하자면 아래의 4가지가 주어진다.
 
+  정리하자면 아래의 4가지가 주어진다.
+  
   1. $D = {(x_1, y_1), … , (x_n, y_n)}$, $D_{val}, D_{test}$ 
   2. $l(M(x), y) \geq 0$ 
   3. $\mathcal {H_1, ..., H_M}$ 
@@ -75,14 +74,13 @@
 
   ⇒ 이를 찾을 때 minimize를 해야하기 때문에 여기서 Optimization algorithm이 사용된다.
 
-  ⇒ 결론적으로, 각 hypothesis 안에서 최적의 모델을 찾는다. 이 중에서 뭐가 가장 좋은 모델인지(model selection)를 결정하면 된다.
+  ⇒ 결론적으로, 각 hypothesis 안에서 최적의 모델을 찾는다. 이 중에서 뭐가 가장 좋은 모델인지(model selection)를 결정하면 된다. <br>`각 모델을 찾을 때 training set에 최적한 모델을 찾았기 때문에 서로 다른 hypothesis에서 나온 best model 중에 누가 좋은지 보기 위해서는 훈련셋을 사용하면 안된다. → validation set 사용`
 
-  각 모델을 찾을 때 training set에 최적한 모델을 찾았기 때문에 서로 다른 hypothesis에서 나온 best model 중에 누가 좋은지 보기 위해서는 훈련셋을 사용하면 안된다. → validation set 사용
+  ⇒ reporting을 하기 위해서는 또 다른 데이터셋을 사용해야한다. `→ test set 사용`<br>
 
-  ⇒ reporting을 하기 위해서는 또 다른 데이터셋을 사용해야한다. → test set 사용
 
-<br>
-  - Three points to consider both in research and in practice
-    1. How do we decide/design a **hypothesis set**?
-    2. How do we decide a **loss function**?
-    3. How do we **optimize** the loss function?
+## 정리
+Three points to consider both in research and in practice
+  1. How do we decide/design a **hypothesis set**?
+  2. How do we decide a **loss function**?
+  3. How do we **optimize** the loss function?
